feat(api): getlakeinternalaccess
